Fix AppsTable spacing

--- a/packages/tapisui-common/src/components/jobs/JobLauncher/FieldArray.module.scss
+++ b/packages/tapisui-common/src/components/jobs/JobLauncher/FieldArray.module.scss
@@ -105,7 +105,7 @@
   font-weight: bold;
   font-size: 0.75em !important;
   position: relative;
-  top: 0.25em;
+  top: 0.2em;
 }
 
 .checkItem {
